# forecast_venus

./: README.md  app.py  main.py  pyproject.toml
Notebooks/: eda.ipynb
app/components/: __init__.py  charts.py  filters.py  metrics.py
app/pages/: __init__.py  performance.py  profit.py  revenue.py  sales.py
app/utils/: __init__.py  data_loader.py  metrics.py
dados/: victor.csv
