[project]
name = "forecast-venus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coreforecast>=0.0.16",
    "ipykernel>=7.1.0",
    "mlflow>=3.6.0",
    "nbformat>=5.10.4",
    "neuralforecast>=3.1.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "statsforecast>=2.0.3",
    "streamlit>=1.51.0",
    "utilsforecast>=0.2.14",
]
